few features updated

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Simple Interest Calculator</h1>
+        <h1>Web App – Simple Interest Calculator</h1>
         <div class= "calculator">
            <div class="input-field">   
            
@@ -45,7 +45,8 @@
      </div>
        <footer >
           <p>Code & Design: Md Asaduzzaman<br>
-           <a href="https://github.com/asadleon7">GitHub</a>
+           <a href="https://github.com/asadleon7">GitHub</a><br>
+             Ⓒ Everyone Can Get Rich
           </p>
      </footer>
      <script src="script.js"></script>
